# CSPeek

./: .gitignore  README.md  pyproject.toml
.github/carl/: current-pr-contract.md  invariants.yml  memory.md  repo-map.json  runtime.json
csp_scanner/: __init__.py  __main__.py  assess.py  cli.py  discovery.py  fetch.py  inputs.py  output.py  scanner.py
src/cspeek/: __init__.py  __main__.py  assess.py  cli.py  discovery.py  fetch.py  models.py  output.py  report.py  scanner.py
tests/: fakes.py  test_assess.py  test_cli.py  test_discovery.py  test_fetch.py  test_inputs.py  test_output.py  test_report.py  test_scanner.py
